After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 642949 - pbutils: encoding-target: chaining error object in loading target from file may cause crash if there is no error
pbutils: encoding-target: chaining error object in loading target from file m...
Status: RESOLVED FIXED
Product: GStreamer
Classification: Platform
Component: gst-plugins-base
git master
Other Linux
: Normal normal
: 0.10.33
Assigned To: GStreamer Maintainers
GStreamer Maintainers
: 656535 (view as bug list)
Depends on:
Blocks:
 
 
Reported: 2011-02-22 08:53 UTC by Teemu Katajisto
Modified: 2011-08-23 10:53 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
Proposed fix. (2.07 KB, patch)
2011-02-22 08:54 UTC, Teemu Katajisto
committed Details | Review

Description Teemu Katajisto 2011-02-22 08:53:00 UTC
If application passed GError object pointer set to NULL to gst_encoding_target_load_from_file function the error handling in load_file_and_read_header may cause crash in error printing if no actual error happens.

Instead of chaining the error object use temporary error and g_propagate_error to report errors happening in g_key_file_load_from_file to application level.
Comment 1 Teemu Katajisto 2011-02-22 08:54:26 UTC
Created attachment 181565 [details] [review]
Proposed fix.
Comment 2 Edward Hervey 2011-02-22 10:53:10 UTC
commit 17fddc13d2bded11bb52e7698230c69e514a8345
Author: Teemu Katajisto <teemu.katajisto@digia.com>
Date:   Mon Feb 21 15:58:16 2011 +0200

    pbutils: encoding-target: fix error checking in target file loading
    
    https://bugzilla.gnome.org/show_bug.cgi?id=642949
Comment 3 Jonathan Matthew 2011-08-23 10:53:44 UTC
*** Bug 656535 has been marked as a duplicate of this bug. ***