pbutils: encoding-target: fix error checking in target file loading

https://bugzilla.gnome.org/show_bug.cgi?id=642949